--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>PuTTY Export Generator</title>
+  <title>RegReSS - PuTTY Export Generator</title>
   <style>
   * {
     box-sizing: border-box;
