--- a/index.html
+++ b/index.html
@@ -230,7 +230,12 @@
     const url = URL.createObjectURL(blob);
     const a = document.createElement('a');
     a.href = url;
-    a.download = 'putty-export.reg';
+    const now = new Date();
+    const pad = (n) => n.toString().padStart(2, '0');
+    const timestamp = `${pad(now.getDate())}-${pad(now.getMonth() + 1)}-${now.getFullYear().toString().slice(-2)}_${pad(now.getHours())}_${pad(now.getMinutes())}`;
+    const username = variables.USERNAME.trim().replace(/\s+/g, '_'); // Leerzeichen entfernen/ersetzen
+    a.download = `${username}_putty-export_${timestamp}.reg`;
+
     a.click();
   });
 
