--- a/index.html
+++ b/index.html
@@ -1,126 +1,12 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>RegReSS - PuTTY Export Generator</title>
-  <style>
-  * {
-    box-sizing: border-box;
-  }
 
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #f9fafb;
-    color: #111827;
-    padding: 2rem;
-    max-width: 800px;
-    margin: auto;
-  }
-
-  h1, h3 {
-    color: #1f2937;
-    margin-bottom: 1rem;
-  }
-
-  form {
-    background: #ffffff;
-    border: 1px solid #e5e7eb;
-    border-radius: 12px;
-    padding: 2rem;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-    margin-bottom: 2rem;
-  }
-
-  label {
-    display: block;
-    font-weight: 500;
-    margin-top: 1.5rem;
-    color: #374151;
-  }
-
-  input[type="text"] {
-    width: 100%;
-    padding: 0.75rem;
-    margin-top: 0.5rem;
-    border: 1px solid #d1d5db;
-    border-radius: 8px;
-    background-color: #f3f4f6;
-    transition: border 0.2s ease-in-out;
-  }
-
-  input[type="text"]:focus {
-    border-color: #3b82f6;
-    outline: none;
-    background-color: #fff;
-  }
-
-  .group-list {
-    margin-top: 1rem;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-  }
-
-  .group-list label {
-    display: flex;
-    align-items: center;
-    background: #f3f4f6;
-    padding: 0.5rem 1rem;
-    border-radius: 8px;
-    cursor: pointer;
-    border: 1px solid transparent;
-    transition: all 0.2s;
-  }
-
-  .group-list input[type="checkbox"] {
-    margin-right: 0.5rem;
-  }
-
-  .group-list label:hover {
-    background: #e5e7eb;
-    border-color: #d1d5db;
-  }
-
-  button[type="submit"] {
-    margin-top: 2rem;
-    padding: 0.75rem 1.5rem;
-    background-color: #3b82f6;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background-color 0.2s;
-  }
-
-  button[type="submit"]:hover {
-    background-color: #2563eb;
-  }
-
-  .output {
-    white-space: pre-wrap;
-    background: #f3f4f6;
-    padding: 1.5rem;
-    border-radius: 10px;
-    border: 1px solid #e5e7eb;
-    font-family: Consolas, monospace;
-    color: #374151;
-  }
-
-  label input[type="checkbox"] {
-    margin-right: 0.5rem;
-    transform: scale(1.2);
-  }
-
-  button[disabled] {
-    background-color: #9ca3af; /* schönes graues Aussehen */
-    cursor: not-allowed;
-  }
-
-
-</style>
-
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <title>RegReSS - PuTTY Export Generator</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+  </head>
+  
 <body>
   <h1>PuTTY Session Export Generator</h1>
 
@@ -153,95 +39,8 @@
   <h3>Exportierte Registry:</h3>
   <div class="output" id="output"></div>
 
-  <script>
-  const groupNames = [
-    "Discover", "EFRE", "EPF", "eProcurement", "eRechnung", "Formularserver",
-    "Gewan", "Limesurvey", "Medienupload", "MessageProxy", "Oscillator",
-    "Sprungserver", "Vorhabensmgmt", "VUdat"
-  ];
+  <script src="assets/js/script.js"></script>
 
-  const backupCheckbox = document.getElementById("backupConfirm");
-  const submitBtn = document.getElementById("submitBtn");
-  const backupWarning = document.getElementById("backupWarning");
-  
-  backupCheckbox.addEventListener("change", () => {
-    submitBtn.disabled = !backupCheckbox.checked;
-    backupWarning.style.display = backupCheckbox.checked ? "none" : "block";
-  });
-
-
-  const groupListContainer = document.getElementById("groupList");
-  groupNames.forEach(group => {
-    const label = document.createElement("label");
-    label.innerHTML = `<input type="checkbox" name="groups" value="${group}"> ${group}`;
-    groupListContainer.appendChild(label);
-  });
-
-  document.getElementById('configForm').addEventListener('submit', async function(e) {
-    e.preventDefault();
-
-    const form = e.target;
-    const formData = new FormData(form);
-    const formatPath = (path) => path?.replace(/\\/g, '\\\\');
-
-    const variables = {
-      USERNAME: formData.get('USERNAME'),
-      JAVAUSER: formData.get('JAVAUSER'),
-      PubFileDir: formatPath(formData.get('PubFileDir') || ''),
-      LogFileDir: formatPath(formData.get('LogFileDir') || '')
-    };
-
-
-    const selectedGroups = groupNames.filter(name => form.querySelector(`input[value="${name}"]`).checked);
-    if (selectedGroups.length === 0) {
-      alert("Bitte wähle mindestens eine Gruppe aus.");
-      return;
-    }
-    const output = document.getElementById('output');
-    output.textContent = '';
-
-    const fetchGroupFiles = async (group) => {
-      const fileUrl = `https://raw.githubusercontent.com/4RJN/regress/main/${group}/config.reg`;
-      try {
-        const response = await fetch(fileUrl);
-        if (!response.ok) {
-          throw new Error(`Fehler beim Laden der Datei: ${fileUrl}`);
-        }
-        const content = await response.text();
-        return content
-          .replace(/USERNAME/g, variables.USERNAME)
-          .replace(/JAVAUSER/g, variables.JAVAUSER)
-          .replace(/PubFileDir/g, variables.PubFileDir)
-          .replace(/LogFileDir/g, variables.LogFileDir)
-          .replace(/\[HKEY_CURRENT_USER\\Software\\SimonTatham\\PuTTY\\Sessions\]\n?/g, '')
-          .trim();
-      } catch (err) {
-        console.error(`Fehler beim Laden der Gruppe ${group}:`, err);
-        return '';
-      }
-    };
-
-    const allSnippets = (await Promise.all(selectedGroups.map(fetchGroupFiles))).filter(Boolean);
-    const finalContent = 'Windows Registry Editor Version 5.00\n\n[HKEY_CURRENT_USER\\Software\\SimonTatham\\PuTTY\\Sessions]\n\n' + allSnippets.join('\n\n');
-
-    output.textContent = finalContent;
-
-    const blob = new Blob([finalContent], { type: 'text/plain;charset=utf-16' });
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement('a');
-    a.href = url;
-    const now = new Date();
-    const pad = (n) => n.toString().padStart(2, '0');
-    const timestamp = `${pad(now.getDate())}-${pad(now.getMonth() + 1)}-${now.getFullYear().toString().slice(-2)}_${pad(now.getHours())}_${pad(now.getMinutes())}`;
-    const username = variables.USERNAME.trim().replace(/\s+/g, '_'); // Leerzeichen entfernen/ersetzen
-    a.download = `${username}_putty-export_${timestamp}.reg`;
-
-    a.click();
-  });
-
-  
-
-</script>
 
 </body>
 </html>
